# ot-harjoitustyo

./: .coveragerc  .env  .gitignore  .test.env  README.md  pyproject.toml  pytest.ini  tasks.py
data/: default_user.csv  test_user.csv
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaaminen.md  tunnit.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml  tasks.py
laskarit/viikko2/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: viikko3.md
src/: build.py  config.py  database.py  main.py
src/entities/: addition_operation.py  binary_operation.py  division_operation.py  multiplication_operation.py  operations.py  setting_value.py  settings.py  substraction_operation.py  user.py
src/repositories/: settings_repository.py  user_repository.py
src/services/: arithmetic_service.py  main_service.py
src/tests/entities/: operations_test.py  setting_value_test.py  settings_test.py  user_test.py
src/tests/repositories/: fake_settings_repository.py  fake_user_repository.py  settings_repository_test.py  user_repository_test.py
src/tests/services/: arithmetic_service_test.py  main_service_test.py
src/ui/: addition.py  base.py  base_exercise.py  constants.py  create_user.py  division.py  exercise_selection.py  exercises.py  login.py  multiplication.py  settings.py  substraction.py  ui.py
src/ui/components/: addition_settings_frame.py  division_settings_frame.py  exercise_frame.py  exercise_results_frame.py  keypad_frame.py  settings_frame.py  (+5 more)
