[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Roni Tammisalo <81182631+rtammisalo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pylint = "^2.7.4"
pytest = "^6.2.3"
coverage = "^5.5"
pytest-dotenv = "^0.5.2"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
