[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["Roni Tammisalo <81182631+rtammisalo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
